// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiContextMenuItem props disabled 1`] = `
<button
  class="euiContextMenuItem emotion-euiContextMenuItem-m-center-disabled"
  disabled=""
  type="button"
>
  <span
    class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
  />
</button>
`;

exports[`EuiContextMenuItem props icon 1`] = `
<div
  class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
>
  <span
    class="euiIcon fa-user emotion-euiContextMenu__icon"
  />
  <span
    class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
  />
</div>
`;

exports[`EuiContextMenuItem props size m 1`] = `
<div
  class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
>
  <span
    class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
  />
</div>
`;

exports[`EuiContextMenuItem props size s 1`] = `
<div
  class="euiContextMenuItem emotion-euiContextMenuItem-s-center"
>
  <span
    class="euiContextMenuItem__text emotion-euiContextMenuItem__text-s"
  />
</div>
`;

exports[`EuiContextMenuItem renders 1`] = `
<a
  aria-label="aria-label"
  class="euiContextMenuItem testClass1 testClass2 emotion-euiContextMenuItem-m-center-euiTestCss"
  data-test-subj="test subject string"
  href="url"
  rel="noreferrer"
>
  <span
    class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
  >
    Hello
  </span>
</a>
`;

exports[`EuiContextMenuItem tooltip behavior 1`] = `
<body
  class="euiBody-hasPortalContent"
>
  <div>
    <span
      class="euiToolTipAnchor eui-displayBlock emotion-euiToolTipAnchor-inlineBlock"
    >
      <button
        aria-describedby="generated-id"
        class="euiContextMenuItem emotion-euiContextMenuItem-m-center"
        type="button"
      >
        <span
          class="euiContextMenuItem__text emotion-euiContextMenuItem__text"
        >
          Hello
        </span>
      </button>
    </span>
  </div>
  <div
    data-euiportal="true"
  >
    <div
      class="euiToolTipPopover euiToolTip emotion-euiToolTip-top"
      data-position="top"
      id="generated-id"
      position="top"
      role="tooltip"
      style="top: -16px; left: -10px;"
    >
      <div
        class="euiToolTip__title emotion-euiToolTip__title"
      >
        Test
      </div>
      <div
        class="euiToolTip__arrow emotion-euiToolTip__arrow-top"
        style="left: 3px; top: 100%;"
      />
      <div>
        tooltip content
      </div>
    </div>
  </div>
</body>
`;
